# OpenFrontIO

./: .gitignore  .prettierignore  Dockerfile  README.md  TODO.txt  cloudbuild.yaml  deploy.sh  docker-compose.yml  eslint.config.js  example.env  otel-collector-config.yaml  package-lock.json  package.json  setup.sh  supervisord.conf  tsconfig.json  update.sh  webpack.config.js
.github/workflows/: ci.yml  deploy.yml
discord-bot/: package.json
discord-bot/src/: Server.ts
game/: Dockerfile  package.json  tsconfig.json  webpack.config.js
infra/: .gitignore  Types.ts  package-lock.json  package.json  tsconfig.json
infra/analytics/: AnalyticsProcessor.ts  wrangler.toml
infra/api/: API.ts  wrangler.toml
infra/db/: schema.sql
infra/lib/: Database.ts
resources/: QuickChat.json  territory_patterns.json
resources/cosmetic/: cosmetic.json  role.txt  territory_patterns.json
resources/flags/: desktop.ini
resources/lang/: bg.json  bn.json  de.json  debug.json  en.json  eo.json  es.json  fr.json  hi.json  it.json  ja.json  nl.json  pl.json  pt_br.json  ru.json  sh.json  tr.json  uk.json
resources/maps/: LargeWorld.json  WorldMapGiant.json
shared/: package.json
shared/src/: Utils.ts  (+1 more)
src/core/pathfinding/wasm/: Cargo.toml
src/core/pathfinding/wasm/src/: astar.rs  lib.rs
state-service/: Dockerfile  package.json  tsconfig.json  webpack.config.js
tests/: Attack.test.ts  Disconnected.test.ts  Idle.test.ts  MissileSilo.test.ts  PlayerInfo.test.ts  SAM.test.ts  Stats.test.ts  TeamAssignment.test.ts  TerritoryCapture.test.ts  UnitGrid.test.ts  Warship.test.ts
(+190 files in other folders)
